[gd_scene load_steps=6 format=3 uid="uid://clfwvscofnwyr"]

[ext_resource type="Theme" uid="uid://eas28obod65v" path="res://Design/Themes/ThemeRecherches.tres" id="1_qiuuy"]
[ext_resource type="Script" path="res://Script/ButtonRecherche.gd" id="2_i5jlq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wmqen"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0r1e5"]
bg_color = Color(0.345098, 0.345098, 0.345098, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yetdp"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(200, 255)
offset_right = 180.0
offset_bottom = 200.0
theme = ExtResource("1_qiuuy")
script = ExtResource("2_i5jlq")

[node name="PanelC" type="PanelContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_qiuuy")

[node name="PresentationVBoxC" type="VBoxContainer" parent="PanelC"]
layout_mode = 2

[node name="NomMarginC" type="MarginContainer" parent="PanelC/PresentationVBoxC"]
layout_mode = 2
theme_override_constants/margin_top = 3

[node name="NomLabel" type="Label" parent="PanelC/PresentationVBoxC/NomMarginC"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_wmqen")
text = "Nom"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineMarginC" type="MarginContainer" parent="PanelC/PresentationVBoxC"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="LinePanel" type="Panel" parent="PanelC/PresentationVBoxC/LineMarginC"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0r1e5")

[node name="MarginC" type="MarginContainer" parent="PanelC/PresentationVBoxC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="DescriptionLabel" type="Label" parent="PanelC/PresentationVBoxC/MarginC"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 1
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 2

[node name="Line2D" type="Line2D" parent="PanelC/PresentationVBoxC/MarginC"]
visible = false
points = PackedVector2Array(5, 2, 5, 157, 183, 157, 183, 3, 4, 3)
width = 3.0
default_color = Color(0.431373, 0.470588, 0.54902, 1)

[node name="VertPanel" type="Panel" parent="PanelC/PresentationVBoxC/MarginC"]
visible = false
layout_mode = 2
theme = ExtResource("1_qiuuy")

[node name="LineMarginC2" type="MarginContainer" parent="PanelC/PresentationVBoxC"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="LinePanel" type="Panel" parent="PanelC/PresentationVBoxC/LineMarginC2"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0r1e5")

[node name="PrixMarginC" type="MarginContainer" parent="PanelC/PresentationVBoxC"]
layout_mode = 2
theme_override_constants/margin_bottom = 4

[node name="PrixLabel" type="Label" parent="PanelC/PresentationVBoxC/PrixMarginC"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_yetdp")
text = "Label"
horizontal_alignment = 1
